Fixed display bug on the footer link (wrong color)

--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ a {
 
 .footer a{
     text-decoration: underline;
+    color: #F9FAF8;
 }
 
 .footer a:visited{
